--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Github action to upload files or folders to Google Drive",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jodebu/upload-to-drive"
+    "url": "https://github.com/auxoncorp/upload-to-drive"
   },
   "main": "index.js",
   "scripts": {
@@ -13,11 +13,9 @@
   "author": "Yayo Acosta",
   "license": "ISC",
   "dependencies": {
-    "@actions/core": "^1.2.4",
+    "@actions/core": "^1.2.6",
     "archiver": "^4.0.1",
     "googleapis": "^51.0.0"
   },
-  "devDependencies": {
-    "@zeit/ncc": "^0.22.3"
-  }
+  "devDependencies": {}
 }
